[package]
name = "vecgrid"
version = "0.1.3"
authors = [
    "Praxis | Darian <hello@vulpinecat.com>",
    "Harrison McCullough <mccullough.harrison@gmail.com>",
]
edition = "2021"
description = "A dynamically sized two-dimensional vector"
readme = "README.md"
license = "MIT"
repository = "https://github.com/good-praxis/vecgrid"


[[example]]
name = "random"
path = "examples/random.rs"
[[example]]
name = "tic-tac-toe"
path = "examples/tic-tac-toe.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.8.5"
